# fine

./: .gitignore  example.py  fine.grammar  fine.lark  pyproject.toml
fine/: ast.py  binop_builder.py  check.py  config.py  desugarer.py  env.py  eval.py  kind.py  lexer.py  names.py  parser.py  pattern.py  transform.py  type.py  typeinfer.py  types.py  utils.py  visitor.py
fine/ast/: __init__.py  ast.py  base.py  pattern.py  type.py  utils.py
fine/semantic_analysis/: check.py  check_names.py  infer.py
fine/tools/: ast.py  lexer.py  parser.py  scope.py
fine/type/: __init__.py  kind.py  kindinfer.py  quantifier.py  quantify.py  type.py
